--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>OSCA</title>
+    <title>Open Source Career Aid</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
